@@ -433,6 +433,8 @@ underflow in symmetric eigenvalues
 * Chris Mihelich <umbricola@gmail.com> bug reports and suggestions for
 gsl_ldexp and gsl_frexp
 
-* Frank Reininghaus <frank78ac@googlemail.com> complex polynomial evaluation
+* Frank Reininghaus <frank78ac@googlemail.com> complex polynomial
+evaluation and ode improvements
 
 * Jason Coy <funkdart@gmail.com> optimisation for dwt.c
+
